// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonGroup should render 1`] = `
<div
  class="css-9o2u2w-button-group denali-radiobutton-group"
  data-testid="radiobuttongroup"
>
  <div
    class="css-fe5os4-radiobutton denali-radiobutton"
    data-testid="radiobutton-wrapper"
  >
    <input
      id="radiobutton-test-radiobuttongroup-a"
      name="test-radiobuttongroup"
      type="radio"
      value="a"
    />
    <label
      for="radiobutton-test-radiobuttongroup-a"
    >
      Radio A
    </label>
  </div>
  <div
    class="css-fe5os4-radiobutton denali-radiobutton"
    data-testid="radiobutton-wrapper"
  >
    <input
      id="radiobutton-test-radiobuttongroup-b"
      name="test-radiobuttongroup"
      type="radio"
      value="b"
    />
    <label
      for="radiobutton-test-radiobuttongroup-b"
    >
      Radio B
    </label>
  </div>
  <div
    class="css-fe5os4-radiobutton denali-radiobutton"
    data-testid="radiobutton-wrapper"
  >
    <input
      disabled=""
      id="radiobutton-test-radiobuttongroup-c"
      name="test-radiobuttongroup"
      type="radio"
      value="c"
    />
    <label
      for="radiobutton-test-radiobuttongroup-c"
    >
      Radio C
    </label>
  </div>
</div>
`;

exports[`RadioButtonGroup should render vertical radio button group 1`] = `
<div
  class="css-1flq9fj-button-group denali-radiobutton-group"
  data-testid="radiobuttongroup"
>
  <div
    class="css-fe5os4-radiobutton denali-radiobutton"
    data-testid="radiobutton-wrapper"
  >
    <input
      id="radiobutton-test-radiobuttongroup-a"
      name="test-radiobuttongroup"
      type="radio"
      value="a"
    />
    <label
      for="radiobutton-test-radiobuttongroup-a"
    >
      Radio A
    </label>
  </div>
  <div
    class="css-fe5os4-radiobutton denali-radiobutton"
    data-testid="radiobutton-wrapper"
  >
    <input
      id="radiobutton-test-radiobuttongroup-b"
      name="test-radiobuttongroup"
      type="radio"
      value="b"
    />
    <label
      for="radiobutton-test-radiobuttongroup-b"
    >
      Radio B
    </label>
  </div>
  <div
    class="css-fe5os4-radiobutton denali-radiobutton"
    data-testid="radiobutton-wrapper"
  >
    <input
      disabled=""
      id="radiobutton-test-radiobuttongroup-c"
      name="test-radiobuttongroup"
      type="radio"
      value="c"
    />
    <label
      for="radiobutton-test-radiobuttongroup-c"
    >
      Radio C
    </label>
  </div>
</div>
`;
